:bug: commit unsaved main

--- a/main.ipynb
+++ b/main.ipynb
@@ -1144,17 +1144,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 73,
    "id": "51b9b330-1d7d-4b9c-aef8-115549379591",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(1907, 5)"
+       "(1060, 5)"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 73,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1163,7 +1163,7 @@
     "df = pd.concat([df, pd.DataFrame(\n",
     "    {'prompt_en': [i[6:] for i in subsampled_df['prompt'].tolist()],\n",
     "     'prompt_ar': '',\n",
-    "     'response_en': df_alpaca['selected'].tolist(),\n",
+    "     'response_en': subsampled_df['selected'].tolist(),\n",
     "     'response_ar': '',\n",
     "     'source': dataset_repo,\n",
     "    })], ignore_index=True)\n",
@@ -1173,8 +1173,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 74,
    "id": "82a431a9-d335-48de-ba40-0c13fb64f40c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "source\n",
+       "akoksal/LongForm                  200\n",
+       "mlabonne/alpagasus                200\n",
+       "HuggingFaceH4/ultrachat_200k      200\n",
+       "reciprocate/alpaca-eval           200\n",
+       "HuggingFaceH4/Koala-test-set      180\n",
+       "HuggingFaceH4/mt_bench_prompts     80\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 74,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.source.value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "id": "fb80e818-58c2-47b3-9f43-2f5739ff5380",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.to_csv('analyzeDataset.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "088561c8-344f-4e3e-a57f-f80c95e39b94",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "836d112f-38ca-4f98-b1e0-0943578be419",
    "metadata": {},
    "outputs": [],
    "source": []
