:recycle: reformat code

--- a/main.ipynb
+++ b/main.ipynb
@@ -1266,27 +1266,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "3014bcc5-e0d9-4e0e-8b40-8544ea8e2243",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import ast\n",
-    "\n",
-    "def get_correct_format(text):\n",
-    "    try:\n",
-    "        return ast.literal_eval(text)\n",
-    "    except:\n",
-    "        return text"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 5,
    "id": "fe93f312-8547-4dc9-aa88-a4e55cf52cf0",
    "metadata": {},
    "outputs": [],
    "source": [
+    "from utils import get_correct_format\n",
+    "\n",
     "df.prompt_en = df.prompt_en.apply(get_correct_format)\n",
     "df.response_en = df.response_en.apply(get_correct_format)"
    ]
@@ -1378,7 +1364,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
